<resources>
    <string name="app_name">Medibox</string>
    <string name="data_nascimento">Data Nascimento:</string>
    <string name="sexo">Sexo:</string>
    <string name="nome_responsavel">Nome Responsavel:</string>
    <string name="tel_responsavel">Tel. Responsavel:</string>
    <string name="cadastro_residente">Cadastro Residente</string>
    <string name="nome">Nome:</string>
    <string name="observa_es">Observações:</string>
    <string name="residente">Residente</string>
    <string name="data_nascimento_residente">Data Nascimento Residente</string>
    <string name="quarto">Quarto</string>
    <string name="nome_residente">Nome Residente</string>
    <string name="residente_">Residente:</string>
    <string name="quarto_">Quarto:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dosagem_">Dosagem:</string>
    <string name="laboratorio_">Laboratório:</string>
    <string name="descricao_">Descrição:</string>
    <string name="medicamentos_">Medicamentos:</string>
    <string name="adicionar">Adicionar</string>
    <string name="intervalo_">Intervalo:</string>
</resources>