<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/residente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residente_" />

                <TextView
                    android:id="@+id/dataNascimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_nascimento" />

                <TextView
                    android:id="@+id/quarto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quarto_" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idResidente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nome_residente" />

                <TextView
                    android:id="@+id/idDataNascimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/data_nascimento_residente" />

                <TextView
                    android:id="@+id/idQuarto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quarto" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </LinearLayout>
