<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/itemMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textMedicamentosLinha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicamentos_"
                    android:textColor="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/textDosagemLinha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dosagem_"
                    android:textColor="@color/cardview_dark_background"/>

                <TextView
                    android:id="@+id/intervaloLinha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intervalo_"
                    android:textColor="@color/cardview_dark_background"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idMedicamentoLinha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nome medicamento" />

                <TextView
                    android:id="@+id/idDosagemLinha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Dosagem medicamento" />

                <TextView
                    android:id="@+id/idIntervaloLinha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Intervalo" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>