<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CadastroResidenteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/idTitulo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/cadastro_residente"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNome"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/nome"
            android:textAllCaps="false"
            android:textColor="@color/cardview_dark_background"
            android:textIsSelectable="false"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTitulo" />


        <EditText
            android:id="@+id/idNomeMedicamento"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNome" />


        <TextView
            android:id="@+id/textNascimento"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/data_nascimento"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTitulo" />

        <EditText
            android:id="@+id/idNascimento"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginStart="200dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNascimento" />

        <TextView
            android:id="@+id/textSexo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/sexo"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idNascimento" />

        <EditText
            android:id="@+id/idSexo"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginStart="200dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSexo" />

        <TextView
            android:id="@+id/textResponsavel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/nome_responsavel"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idQuarto" />

        <EditText
            android:id="@+id/idResponsavel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResponsavel" />

        <TextView
            android:id="@+id/textTelResponsavel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/tel_responsavel"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idSexo" />

        <EditText
            android:id="@+id/idTelResponsavel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="200dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTelResponsavel" />

        <TextView
            android:id="@+id/textQuarto"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/quarto_"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idNomeMedicamento" />

        <EditText
            android:id="@+id/idQuarto"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textQuarto" />

        <TextView
            android:id="@+id/textObs"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/observa_es"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idResponsavel" />

        <EditText
            android:id="@+id/idObs"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textObs" />

        <TextView
            android:id="@+id/textMedicamentos"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/medicamentos_"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idObs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListaMedicamentosResidente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMedicamentos" />

        <Button
            android:id="@+id/idCancelarMedicamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/loginbutton"
            android:textColor="#ffffff"
            android:text="Cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/idSalvarMedicamento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerListaMedicamentosResidente" />

        <Button
            android:id="@+id/idSalvarMedicamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/loginbutton"
            android:text="Salvar"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idCancelarMedicamento"
            app:layout_constraintTop_toBottomOf="@+id/recyclerListaMedicamentosResidente" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>